<?xml version="1.0" encoding="utf-8"?><!-- XML declaration defining encoding and version used -->

<!-- Root layout allows positioning children relative to each other -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:context=".RecipeListActivity">

    <!-- Toolbar with centered title and left aligned menu -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <!-- Back arrow icon -->
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- centered placeholder for category -->
        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Horizontal divider line -->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/toolbar"
        android:background="#000000"
        android:layout_marginBottom="12dp" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipe_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:paddingTop="12dp"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        android:contentDescription="@string/recipe_list_desc" />

    <!-- If not recipes found, display a message -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/Empty_recipe_list"
        android:textSize="16sp"
        android:textColor="#999999"
        android:gravity="center"
        android:visibility="gone" />



    <!-- Add Button -->
    <Button
        android:id="@+id/btn_add"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/Plus_button"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="12dp"
        android:backgroundTint="#7B61FF"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_button" />

</RelativeLayout>
